--- a/src/app/clients-registrations/leadCart/leadCart.component.html
+++ b/src/app/clients-registrations/leadCart/leadCart.component.html
@@ -1,3 +1,6 @@
+<cart-nav></cart-nav>
+<router-outlet></router-outlet>
+
 <button (click)="goToClientList()">Go Back</button>
 <div>
 	<div>
@@ -13,3 +16,5 @@
 		</div>
 	</div>
 </div>
+
+
