--- a/src/app/clients-registrations/client-list/client-list.component.html
+++ b/src/app/clients-registrations/client-list/client-list.component.html
@@ -1,9 +1,9 @@
-<div class='full-list-container'>
-    <table class='full-list-container__pl-table pl-table'>
-        <caption class='pl-table__caption'>
-            <span class="pl-table__icon ti-marker"></span>
-            Lead List
-        </caption>
+<div class='pl-table-wrapper pl-table-wrapper_full-list'>
+    <div class='pl-table-wrapper__header'>
+        <span class="ti-marker"></span>
+        Lead List
+    </div>
+    <table class='pl-table-wrapper__pl-table pl-table'>
         <thead class='pl-table__thead'>
             <tr class='pl-table__tr'>
                 <th class='pl-table__cell'>
