dumb example with input

--- a/src/app/clients-registrations/leadCart/leadCart.component.html
+++ b/src/app/clients-registrations/leadCart/leadCart.component.html
@@ -1,5 +1,5 @@
 <div class='content-wrapper'>
-	<cart-nav></cart-nav>
+	<cart-nav [currentRoute]="currentRoute"></cart-nav>
 
 	<div class='pl-table-wrapper content-wrapper__pl-table-wrapper'>
 		<div class='pl-table-wrapper__header'>
