--- a/src/app/clients-registrations/cart-navigation/cart-navigation.component.html
+++ b/src/app/clients-registrations/cart-navigation/cart-navigation.component.html
@@ -8,19 +8,19 @@
 			<tr class='pl-table__tr'>
 				<td class='pl-table__cell'>
 					<a [routerLink]="['general']" routerLinkActive='pl-table__ref_active'
-						class='pl-table__ref pl-table__ref_l-side'>General Info</a>
+						class='pl-table__ref pl-table__ref_l-side'>Client's Information</a>
 				</td>
 			</tr>
 			<tr class='pl-table__tr'>
 				<td class='pl-table__cell'>
 					<a [routerLink]="['marketing']" routerLinkActive='pl-table__ref_active'
-						class='pl-table__ref pl-table__ref_l-side'>Marketing Info</a>
+						class='pl-table__ref pl-table__ref_l-side'>Marketing Information</a>
 				</td>
 			</tr>
 			<tr class='pl-table__tr'>
 				<td class='pl-table__cell'>
 					<a [routerLink]="['traiding']" routerLinkActive='pl-table__ref_active'
-						class='pl-table__ref pl-table__ref_l-side'>Traiding Info</a>
+						class='pl-table__ref pl-table__ref_l-side'>Traiding Information</a>
 				</td>
 			</tr>
 		</tbody>
