--- a/src/app/clients-registrations/leadCart/leadCart.component.html
+++ b/src/app/clients-registrations/leadCart/leadCart.component.html
@@ -15,7 +15,7 @@
 <button (click)="goToClientList()">Go Back</button>
 <div>
 	<div>
-		{{leadInfo.name}}
+		{{leadInfo.first_name}}
 		<div>
 			<span></span>
 		</div>
