--- a/src/app/clients-registrations/client-list/client-list.component.html
+++ b/src/app/clients-registrations/client-list/client-list.component.html
@@ -18,7 +18,7 @@
             <tr *ngFor="let lead of clientList"
                 (click)="onSelect(lead)" class='pl-table__tr'>
                 <td class='pl-table__cell'>{{lead.id}}</td>
-                <td class='pl-table__cell'>{{lead.name}}</td>
+                <td class='pl-table__cell'>{{lead.first_name}} {{lead.last_name}}</td>
             </tr>
         </tbody>
     </table>
