--- a/src/app/clients-registrations/leadCart/leadCart.component.html
+++ b/src/app/clients-registrations/leadCart/leadCart.component.html
@@ -7,7 +7,7 @@
 			{{currentRoute}}
 		</div>
 		<div class='content-wrapper__main-content'>
-			<router-outlet (onChanged)="onChanged($event)"></router-outlet>
+			<router-outlet></router-outlet>
 		</div>
 	</div>
 </div>
